Added runtime sock

--- a/5.4.0.yaml
+++ b/5.4.0.yaml
@@ -230,8 +230,8 @@ spec:
             - mountPath: /lib/modules
               name: modules-vol
               readOnly: true
-            # - mountPath: /run/runtime.sock
-            #   name: runtime-sock
+              - mountPath: /run/containerd/containerd.sock
+                name: runtime-sock
             #   readOnly: true
             # - mountPath: /host/proc
             #   name: proc-vol
@@ -248,10 +248,10 @@ spec:
         - name: modules-vol
           hostPath:
             path: /lib/modules
-        # - name: runtime-sock
-        #   hostPath:
+        - name: runtime-sock
+          hostPath:
         #     path: /var/run/docker.sock
-        #     path: /var/run/containerd/containerd.sock
+            path: /run/containerd/containerd.sock
         #     path: /run/dockershim.sock
         #     path: /run/k3s/containerd/containerd.sock
         #     path: /var/run/crio/crio.sock
