--- a/5.4.0.yaml
+++ b/5.4.0.yaml
@@ -230,9 +230,9 @@ spec:
             - mountPath: /lib/modules
               name: modules-vol
               readOnly: true
-              - mountPath: /run/runtime.sock
-                name: runtime-sock
-                readOnly: true
+            - mountPath: /run/runtime.sock
+              name: runtime-sock
+            #    readOnly: true
             # - mountPath: /host/proc
             #   name: proc-vol
             #   readOnly: true
