--- a/v5.3.0/rbac.yaml
+++ b/v5.3.0/rbac.yaml
@@ -1,351 +1,25 @@
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: neuvector-binding-app
-rules:
-  - verbs:
-      - get
-      - list
-      - watch
-      - update
-    resources:
-      - nodes
-      - pods
-      - services
-      - namespaces
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: neuvector-binding-rbac
-rules:
-  - verbs:
-      - get
-      - list
-      - watch
-    resources:
-      - rolebindings.rbac.authorization.k8s.io
-      - roles.rbac.authorization.k8s.io
-      - clusterrolebindings.rbac.authorization.k8s.io
-      - clusterroles.rbac.authorization.k8s.io
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: neuvector-binding-app
-subjects:
-  - kind: ServiceAccount
-    name: controller
-    namespace: neuvector
-roleRef:
-  kind: ClusterRole
-  name: neuvector-binding-app
-  apiGroup: rbac.authorization.k8s.io
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: neuvector-binding-rbac
-subjects:
-  - kind: ServiceAccount
-    name: controller
-    namespace: neuvector
-roleRef:
-  kind: ClusterRole
-  name: neuvector-binding-rbac
-  apiGroup: rbac.authorization.k8s.io
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: neuvector-binding-admission
-rules:
-  - verbs:
-      - get
-      - list
-      - watch
-      - create
-      - update
-      - delete
-    resources:
-      - validatingwebhookconfigurations
-      - mutatingwebhookconfigurations
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: neuvector-binding-admission
-subjects:
-  - kind: ServiceAccount
-    name: controller
-    namespace: neuvector
-roleRef:
-  kind: ClusterRole
-  name: neuvector-binding-admission
-  apiGroup: rbac.authorization.k8s.io
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: neuvector-binding-customresourcedefinition
-rules:
-  - verbs:
-      - watch
-      - create
-      - get
-      - update
-    resources:
-      - customresourcedefinitions
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: neuvector-binding-customresourcedefinition
-subjects:
-  - kind: ServiceAccount
-    name: controller
-    namespace: neuvector
-roleRef:
-  kind: ClusterRole
-  name: neuvector-binding-customresourcedefinition
-  apiGroup: rbac.authorization.k8s.io
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: neuvector-binding-nvsecurityrules
-rules:
-  - verbs:
-      - get
-      - list
-      - delete
-    resources:
-      - nvsecurityrules
-      - nvclustersecurityrules
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: neuvector-binding-nvadmissioncontrolsecurityrules
-rules:
-  - verbs:
-      - get
-      - list
-      - delete
-    resources:
-      - nvadmissioncontrolsecurityrules
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: neuvector-binding-nvdlpsecurityrules
-rules:
-  - verbs:
-      - get
-      - list
-      - delete
-    resources:
-      - nvdlpsecurityrules
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: neuvector-binding-nvwafsecurityrules
-rules:
-  - verbs:
-      - get
-      - list
-      - delete
-    resources:
-      - nvwafsecurityrules
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: neuvector-binding-nvsecurityrules
-subjects:
-  - kind: ServiceAccount
-    name: controller
-    namespace: neuvector
-roleRef:
-  kind: ClusterRole
-  name: neuvector-binding-nvsecurityrules
-  apiGroup: rbac.authorization.k8s.io
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: neuvector-binding-view
-subjects:
-  - kind: ServiceAccount
-    name: controller
-    namespace: neuvector
-roleRef:
-  kind: ClusterRole
-  name: view
-  apiGroup: rbac.authorization.k8s.io
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: neuvector-binding-nvwafsecurityrules
-subjects:
-  - kind: ServiceAccount
-    name: controller
-    namespace: neuvector
-roleRef:
-  kind: ClusterRole
-  name: neuvector-binding-nvwafsecurityrules
-  apiGroup: rbac.authorization.k8s.io
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: neuvector-binding-nvadmissioncontrolsecurityrules
-subjects:
-  - kind: ServiceAccount
-    name: controller
-    namespace: neuvector
-roleRef:
-  kind: ClusterRole
-  name: neuvector-binding-nvadmissioncontrolsecurityrules
-  apiGroup: rbac.authorization.k8s.io
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: neuvector-binding-nvdlpsecurityrules
-subjects:
-  - kind: ServiceAccount
-    name: controller
-    namespace: neuvector
-roleRef:
-  kind: ClusterRole
-  name: neuvector-binding-nvdlpsecurityrules
-  apiGroup: rbac.authorization.k8s.io
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  name: neuvector-binding-scanner
-  namespace: neuvector
-rules:
-  - verbs:
-      - get
-      - patch
-      - update
-      - watch
-    resources:
-      - deployments
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: neuvector-binding-scanner
-  namespace: neuvector
-subjects:
-  - kind: ServiceAccount
-    name: updater
-    namespace: neuvector
-  - kind: ServiceAccount
-    name: controller
-    namespace: neuvector
-roleRef:
-  kind: Role
-  name: neuvector-binding-scanner
-  apiGroup: rbac.authorization.k8s.io
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  name: neuvector-binding-secret
-  namespace: neuvector
-rules:
-  - verbs:
-      - get
-    resources:
-      - secrets
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: neuvector-binding-secret
-  namespace: neuvector
-subjects:
-  - kind: ServiceAccount
-    name: controller
-    namespace: neuvector
-roleRef:
-  kind: Role
-  name: neuvector-binding-secret
-  apiGroup: rbac.authorization.k8s.io
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: neuvector-binding-nvcomplianceprofiles
-rules:
-  - verbs:
-      - get
-      - list
-      - delete
-    resources:
-      - nvcomplianceprofiles
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: neuvector-binding-nvcomplianceprofiles
-subjects:
-  - kind: ServiceAccount
-    name: controller
-    namespace: neuvector
-roleRef:
-  kind: ClusterRole
-  name: neuvector-binding-nvcomplianceprofiles
-  apiGroup: rbac.authorization.k8s.io
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: neuvector-binding-nvvulnerabilityprofiles
-rules:
-  - verbs:
-      - get
-      - list
-      - delete
-    resources:
-      - nvvulnerabilityprofiles
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: neuvector-binding-nvvulnerabilityprofiles
-subjects:
-  - kind: ServiceAccount
-    name: controller
-    namespace: neuvector
-roleRef:
-  kind: ClusterRole
-  name: neuvector-binding-nvvulnerabilityprofiles
-  apiGroup: rbac.authorization.k8s.io
+kubectl create clusterrole neuvector-binding-app --verb=get,list,watch,update --resource=nodes,pods,services,namespaces
+kubectl create clusterrole neuvector-binding-rbac --verb=get,list,watch --resource=rolebindings.rbac.authorization.k8s.io,roles.rbac.authorization.k8s.io,clusterrolebindings.rbac.authorization.k8s.io,clusterroles.rbac.authorization.k8s.io
+kubectl create clusterrolebinding neuvector-binding-app --clusterrole=neuvector-binding-app --serviceaccount=neuvector:controller
+kubectl create clusterrolebinding neuvector-binding-rbac --clusterrole=neuvector-binding-rbac --serviceaccount=neuvector:controller
+kubectl create clusterrole neuvector-binding-admission --verb=get,list,watch,create,update,delete --resource=validatingwebhookconfigurations,mutatingwebhookconfigurations
+kubectl create clusterrolebinding neuvector-binding-admission --clusterrole=neuvector-binding-admission --serviceaccount=neuvector:controller
+kubectl create clusterrole neuvector-binding-customresourcedefinition --verb=watch,create,get,update --resource=customresourcedefinitions
+kubectl create clusterrolebinding neuvector-binding-customresourcedefinition --clusterrole=neuvector-binding-customresourcedefinition --serviceaccount=neuvector:controller
+kubectl create clusterrole neuvector-binding-nvsecurityrules --verb=get,list,delete --resource=nvsecurityrules,nvclustersecurityrules
+kubectl create clusterrole neuvector-binding-nvadmissioncontrolsecurityrules --verb=get,list,delete --resource=nvadmissioncontrolsecurityrules
+kubectl create clusterrole neuvector-binding-nvdlpsecurityrules --verb=get,list,delete --resource=nvdlpsecurityrules
+kubectl create clusterrole neuvector-binding-nvwafsecurityrules --verb=get,list,delete --resource=nvwafsecurityrules
+kubectl create clusterrolebinding neuvector-binding-nvsecurityrules --clusterrole=neuvector-binding-nvsecurityrules --serviceaccount=neuvector:controller
+kubectl create clusterrolebinding neuvector-binding-view --clusterrole=view --serviceaccount=neuvector:controller
+kubectl create clusterrolebinding neuvector-binding-nvwafsecurityrules --clusterrole=neuvector-binding-nvwafsecurityrules --serviceaccount=neuvector:controller
+kubectl create clusterrolebinding neuvector-binding-nvadmissioncontrolsecurityrules --clusterrole=neuvector-binding-nvadmissioncontrolsecurityrules --serviceaccount=neuvector:controller
+kubectl create clusterrolebinding neuvector-binding-nvdlpsecurityrules --clusterrole=neuvector-binding-nvdlpsecurityrules --serviceaccount=neuvector:controller
+kubectl create role neuvector-binding-scanner --verb=get,patch,update,watch --resource=deployments -n neuvector
+kubectl create rolebinding neuvector-binding-scanner --role=neuvector-binding-scanner --serviceaccount=neuvector:updater --serviceaccount=neuvector:controller -n neuvector
+kubectl create role neuvector-binding-secret --verb=get --resource=secrets -n neuvector
+kubectl create rolebinding neuvector-binding-secret --role=neuvector-binding-secret --serviceaccount=neuvector:controller -n neuvector
+kubectl create clusterrole neuvector-binding-nvcomplianceprofiles --verb=get,list,delete --resource=nvcomplianceprofiles
+kubectl create clusterrolebinding neuvector-binding-nvcomplianceprofiles --clusterrole=neuvector-binding-nvcomplianceprofiles --serviceaccount=neuvector:controller
+kubectl create clusterrole neuvector-binding-nvvulnerabilityprofiles --verb=get,list,delete --resource=nvvulnerabilityprofiles
+kubectl create clusterrolebinding neuvector-binding-nvvulnerabilityprofiles --clusterrole=neuvector-binding-nvvulnerabilityprofiles --serviceaccount=neuvector:controller
